tests/NormalTests/paczka1/fuzzy1/22235829.err
Error in line 4: CTcNmP A153 99,8
Error in line 15: L3RKTjkqIN S739 96,4
Error in line 22: L3RKTjkqIN A153 63,3
Error in line 13: CTcNmP A153 62,7
Error in line 25: CTcNmP S739 95,9
Error in line 26: wgip A153 28,5
